--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">ScuffySuspension</div>
+        <div class="title">ScuffySuspension- FraserGameDev</div>
       </div>
     </div>
   </body>
